// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieTabs should renders correctly details 1`] = `
<div
  className="movie-card__desc"
>
  <nav
    className="movie-nav movie-card__nav"
  >
    <ul
      className="movie-nav__list"
    >
      <li
        className="movie-nav__item false"
        onClick={[Function]}
      >
        <span
          className="movie-nav__link"
        >
          Overview
        </span>
      </li>
      <li
        className="movie-nav__item movie-nav__item--active"
        onClick={[Function]}
      >
        <span
          className="movie-nav__link"
        >
          Details
        </span>
      </li>
      <li
        className="movie-nav__item false"
        onClick={[Function]}
      >
        <span
          className="movie-nav__link"
        >
          Reviews
        </span>
      </li>
    </ul>
  </nav>
  <movie-details />
</div>
`;

exports[`MovieTabs should renders correctly overview 1`] = `
<div
  className="movie-card__desc"
>
  <nav
    className="movie-nav movie-card__nav"
  >
    <ul
      className="movie-nav__list"
    >
      <li
        className="movie-nav__item movie-nav__item--active"
        onClick={[Function]}
      >
        <span
          className="movie-nav__link"
        >
          Overview
        </span>
      </li>
      <li
        className="movie-nav__item false"
        onClick={[Function]}
      >
        <span
          className="movie-nav__link"
        >
          Details
        </span>
      </li>
      <li
        className="movie-nav__item false"
        onClick={[Function]}
      >
        <span
          className="movie-nav__link"
        >
          Reviews
        </span>
      </li>
    </ul>
  </nav>
  <movie-overview />
</div>
`;

exports[`MovieTabs should renders correctly reviews 1`] = `
<div
  className="movie-card__desc"
>
  <nav
    className="movie-nav movie-card__nav"
  >
    <ul
      className="movie-nav__list"
    >
      <li
        className="movie-nav__item false"
        onClick={[Function]}
      >
        <span
          className="movie-nav__link"
        >
          Overview
        </span>
      </li>
      <li
        className="movie-nav__item false"
        onClick={[Function]}
      >
        <span
          className="movie-nav__link"
        >
          Details
        </span>
      </li>
      <li
        className="movie-nav__item movie-nav__item--active"
        onClick={[Function]}
      >
        <span
          className="movie-nav__link"
        >
          Reviews
        </span>
      </li>
    </ul>
  </nav>
  <movie-reviews />
</div>
`;
